# reverse-engineer-simple-website

./: .gitignore  2026-01-13-command-messageinitcommand-message.txt  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yml
docs/: design-notes.md
src/revweb/: cli.py  config.py  logging.py  models.py
src/revweb/crawl/: handlers.py  map_builder.py  runner.py  url_rules.py
src/revweb/io/: csv_writer.py  md_writer.py
src/revweb/scrape/: pipelines.py  runner.py
src/revweb/spec/: website_rebuild.py
storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_0.__metadata__.json  __RQ_STATE_qG6vpo5AbZPyDmk2I  __RQ_STATE_qG6vpo5AbZPyDmk2I.__metadata__.json  __metadata__.json
storage/request_queues/default/: 0004f08932a7fda.json  00156aef93044ee.json  00a7215e8651763.json  00cf0574ab11486.json  01023b9b7c9b58f.json  01b1f606ea682e8.json  0205c6662514051.json  0208b6810ccb6d7.json  0249d6f004667f5.json  029cedf7d91bf08.json  02b83941e63c4f6.json  02f27e3dff4a705.json  03738be324d6ab1.json  03b841027c39afc.json  03bd9540bc9ba6a.json  03d0016f9a07335.json  03ed6972f2c13c4.json  03f0113f59de969.json  0406a3b9e5141a9.json  04585844551dcae.json  04d1d1d7df54d85.json  050e41438fbb48f.json  0546097caacb368.json  055157ffbff0c63.json  056b38b323eee62.json  05c8a6161ea1e80.json  061cedb137a0d92.json  0655ab6fcb76a0f.json  0662e2cc192bf40.json  06bd43f87cdfd74.json  0701f6aca3b2809.json  076b7e23c4b3e32.json  (+1201 more)
tests/: conftest.py  test_cli_e2e.py  test_config.py  test_csv_writer.py  test_extractors_common.py  test_map_builder.py  test_md_writer.py  test_models.py  test_pipeline_integration.py  test_scrapy_compat.py  test_url_rules.py
(+9 files in other folders)
